<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.VideoFragment">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/video_exo_player"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center" />
</FrameLayout>