<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.MenuRecipesFragment">

    <Button
        android:id="@+id/ingredients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Ingredients for Cheesecake"
        android:background="@color/toolBarColor"
        android:textSize="16sp"
        android:layout_margin="8dp"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/menu_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="16sp"
        android:visibility="invisible"/>
</LinearLayout>